# ceph-ci

./: .gitignore  .gitmodules  CMakeLists.txt  FORCED_BUILD  PendingReleaseNotes  README.md  ceph.spec.in  do_cmake.sh  dummy-commit.txt  dummy-file  dummy-file-for-ceph-ci-builds.txt  fix  force_build.txt  install-deps.sh  make-dist  win32_build.sh
admin/: doc-requirements.txt
cmake/modules/: BuildArrow.cmake  BuildBoost.cmake  BuildOpentelemetry.cmake  BuildQATzip.cmake  BuildRocksDB.cmake  Buildpmdk.cmake  Buildpmem.cmake  Distutils.cmake  Findpmdk.cmake  Findutf8proc.cmake
debian/: .gitignore  ceph-base.install  ceph-common.install  ceph-common.postinst  ceph-mgr-dashboard.requires  ceph-mgr.requires  ceph-test.install  cephfs-top.install  control  py3dist-overrides  rules
doc/: man_index.rst
doc/cephadm/: host-management.rst  install.rst  operations.rst  upgrade.rst
doc/cephfs/: administration.rst  cephfs-top.rst  client-auth.rst  fs-volumes.rst  mds-config-ref.rst  mds-journaling.rst  multimds.rst  quota.rst  snap-schedule.rst
doc/dev/: perf_counters.rst  prim-balancer-design.rst  release-checklists.rst
doc/mgr/: progress.rst  prometheus.rst  smb.rst  telemetry.rst
doc/radosgw/: account.rst  (+9 more)
qa/: run_xfstests-obsolete.sh  run_xfstests_qemu.sh  valgrind.supp
src/: .clang-format  CMakeLists.txt  README  ceph.in  ceph_fuse.cc  ceph_mon.cc  ceph_nvmeof_monitor_client.cc  ceph_osd.cc  stop.sh  vstart.sh
src/crimson/tools/: CMakeLists.txt
src/crimson/tools/store_nbd/: tm_driver.cc
src/test/lazy-omap-stats/: CMakeLists.txt  lazy_omap_stats_test.cc
(+1719 files in other folders)
